# RektGBM

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yaml  pypi_release.yaml  test.yaml
examples/: README.md  basic.py  basic_regression.py  binary_classfication.py  multiclass_classification.py  nonnegative_regression.py  quantile_regression.py  regression.py  simple_regression.py
examples/classification/: binary_classfication.py  multiclass_classification.py
examples/rank/: basic_rank.py
examples/regression/: basic_regression.py  gamma_regression.py  huber_regression.py  quantile_regression.py
rektgbm/: __init__.py  addparams.py  base.py  cli.py  dataset.py  encoder.py  engine.py  gbm.py  metric.py  model.py  objective.py  optimize.py  optimizer.py  param.py  rektgbm.py  task.py
tests/: test_base.py  test_dataset.py  test_encoder.py  test_engine.py  test_gbm.py  test_metric.py  test_objective.py  test_optimizer.py  test_param.py  test_task.py
