[tool.poetry]
name = "rektgbm"
version = "0.1.2"
description = "No-brainer machine learning solution to achieve satisfactory performance"
authors = ["RektPunk <rektpunk@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/RektPunk/RektGBM"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
lightgbm = "^4.5.0"
xgboost = "^2.1.1"
optuna = "^3.6.1"
typer = "^0.12.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"
pre-commit = "^3.8.0"
pytest = "^8.3.2"
flake8 = "^7.1.1"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
rektgbm = "rektgbm.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
